# prompt-os

./: README.md  demo_streamlit.py  example.py  pyproject.toml  requirements.txt  run_streamlit.py  streamlit_app.py
assets/: demo.mov
prompt_os/: __init__.py  __main__.py  cli.py  prompt_grader.py
prompt_os/prompts/: prompt_grader.txt
